<resources>
    <string name="app_name">MobileProject</string>
    <string name="introduceApp">당신을 위한 퀠린둬</string>
    <string name="monthly">월간 캘린더</string>
    <string name="searchActivity">모임 찾기</string>
    <string name="hashtag">해시태그</string>
    <string name="input">모임 검색</string>
    <string name="user_recommnad">사용자 맞춤 모임 추천</string>
    <string name="top_recommand">인기 많은 모임</string>
    <string name="detail">상세 정보</string>
    <string name="apply">등록</string>
    <string name="detailGroup">모임 상세 내용</string>
    <string name="email">이메일</string>
    <string name="phoneNum">전화번호</string>
    <string name="sosok">소속</string>
    <string name="nameMoim">모임 이름</string>
    <string name="nametag">관련 태그</string>
    <string name="applyOut">신청하기(외부접수)</string>
    <string name="applyIn">신청하기</string>
    <string name="time">2020.10.06(화) 23:59까지 신청 가능</string>
    <string name="infoMoim">모임 정보</string>
    <string name="infoPeople">개설자 정보</string>
    <string name="askInputHint">비방, 홍보 등의 글은 이용약관 및 관련 법에 의해 제재될 수 있습니다. </string>
    <string name="ask">문의/기대평</string>
    <string name="detailMoim">모임 설명</string>
    <string name="outMoim1">본 공모전은 외부접수 공모전입니다.</string>
    <string name="explainMoim">안녕하세요 공모전 드루와</string>
    <string name="outMoim2">외부접수 페이지에서 공모전 담당자가 기재한 방법 또는 설정한 링크를 통해 참여 신청이 가능합니다.</string>
    <string name="inMoim">본 공모전은 내부접수 공모전입니다.</string>
    <string name="intMoim2">정원 1000명</string>
    <string name="nice">선택 완료</string>

    <string name="steamedTitle">찜 내역</string>
    <string name="meet">모임</string>
    <string name="founder">개설자</string>
    <string name="steameContent1">총 0개의 모임</string>
    <string name="steameContent2">찜 내역이 없습니다.</string>

    <string name="searchTitle">일정 검색</string>
    <string name="search">검색</string>

    <string name="applicationDetailsTitle">신청 내역</string>
    <string name="title">공모전 주제</string>
    <string name="date">날짜</string>
    <string name="position">위치</string>
    <string name="applicationContent1">총 2개의 모임</string>
    <string name="applicationContent2">자유과제 마감(6명)</string>
    <string name="applicationContent3">미결제/대기자</string>
    <string name="applicationContent4">본 모임은 종료 되었습니다.</string>
    <string name="applicationContent5">본 모임은 진행 중입니다.</string>
    <string name="applicationContent6">개인 예비접수(1명)</string>

    <string name="interested">관심 정보 설정</string>
    <string name="item1">봉사활동</string>
    <string name="item2">인테리어</string>
    <string name="item3">축제</string>
    <string name="item4">기획/아이디어</string>
    <string name="item5">디자인</string>
    <string name="item6">IT</string>
    <string name="item7">문학</string>
    <string name="item8">과학</string>
    <string name="item9">예체능</string>
    <string name="item10">네이밍</string>
    <string name="item11">서포터즈</string>
    <string name="item12">취업</string>
    <string name="item13">자격증</string>
    <string name="item14">게임</string>
    <string name="item15">어학</string>
    <string name="item16">마케팅</string>
    <string name="btn_clear">초기화</string>
    <string name="btn_save">확인</string>
</resources>